
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint16_t ;


 scalar_t__ ESP_PARTITION_SUBTYPE_APP_OTA_MIN ;
 int ESP_PARTITION_TYPE_APP ;
 int assert (int ) ;
 int * esp_partition_find_first (int ,scalar_t__,int *) ;

__attribute__((used)) static uint8_t get_ota_partition_count(void)
{
    uint16_t ota_app_count = 0;
    while (esp_partition_find_first(ESP_PARTITION_TYPE_APP, ESP_PARTITION_SUBTYPE_APP_OTA_MIN + ota_app_count, ((void*)0)) != ((void*)0)) {
            assert(ota_app_count < 16 && "must erase the partition before writing to it");
            ota_app_count++;
    }
    return ota_app_count;
}
